--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     /* Grid */
     .tools-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 1.5rem;
       width: 100%;
-      max-width: 640px;
+      max-width: 820px;
     }
 
     /* Tool card */
@@ -141,6 +141,7 @@
 
     .tool-card:nth-child(1) { animation-delay: 0.1s; }
     .tool-card:nth-child(2) { animation-delay: 0.22s; }
+    .tool-card:nth-child(3) { animation-delay: 0.34s; }
 
     .tool-card::after {
       content: '';
@@ -153,6 +154,7 @@
 
     .tool-card.card-pink { --accent: var(--pink); }
     .tool-card.card-teal { --accent: var(--teal); }
+    .tool-card.card-blue { --accent: var(--blue); }
 
     .tool-card:hover {
       transform: translateY(-6px);
@@ -330,6 +332,25 @@
       <div>2</div>
       <div class="fd-bar"></div>
       <div>3</div>
+    </div>
+  </a>
+
+  <!-- Calcular X -->
+  <a class="tool-card card-blue" href="calcular-x.html">
+    <div class="accent-line"></div>
+    <div class="tool-icon">🔍</div>
+    <div>
+      <div class="tool-tag">Proporciones</div>
+      <div class="tool-title">Calcular X<br>en Fracciones</div>
+    </div>
+    <div class="tool-desc">
+      Resuelve proporciones como X/16 = 3/2 usando productos cruzados. Elige dónde está la incógnita.
+    </div>
+    <div class="tool-cta">Abrir herramienta</div>
+    <div class="frac-deco">
+      <div>X</div>
+      <div class="fd-bar"></div>
+      <div>16</div>
     </div>
   </a>
 
